--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "Frontend for Digital Explosion's project",
   "main": "src/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "author": "lisabugx",
   "license": "ISC",
   "dependencies": {
+    "formik": "^2.4.6",
+    "lucide-react": "^0.501.0",
     "next": "^15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
